# cli-pydantic

./: README.md  pyproject.toml  test_example.py
.github/workflows/: publish.yaml  test.yaml
examples/: cli.py  config.yaml
src/cli_pydantic/: __init__.py  lib.py
